# Neuro-Code

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
jobs/: README.md
notebooks/: README.md
notebooks/tests/: 00_end_to_end_smoke_test_REALDATA_DEMO.ipynb
runs/: all_sims_demo.csv  all_sims_demo_repeat.csv
scripts/: README.md  run_parallel.py
src/neuro_code/: README.md
src/neuro_code/helpers/: README.md  extract_pars.py  get_predicted_df.py  model_configs.py  sample_x0.py  select_optimal_parameters.py  simulate_all_models.py  simulate_model_range.py  test_predictions.py  utils_param_flags.py
src/neuro_code/predict/: README.md
src/neuro_code/train/: README.md  cv.py
tests/: README.md
