[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-code"
version = "0.1.0"
description = "RL fitting/prediction utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "pymc3",
    "theano",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neuro_code = []
